# anyxml

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  sample.rng  tmp.rs
.github/workflows/: test.yml
anyxml-automata/: Cargo.toml  README.md
anyxml-automata/src/: ast.rs  content_model.rs  fa.rs  lib.rs  unicode.rs  util.rs  xsregexp.rs
anyxml-base64/: Cargo.toml  README.md
anyxml-base64/src/: lib.rs
anyxml-bench/: Cargo.toml
anyxml-bench/benches/: sax.rs  stax.rs
anyxml-cli/: Cargo.toml  README.md
anyxml-datetime/: Cargo.toml  README.md
anyxml-datetime/resources/: inserted-leapseconds.rs
anyxml-datetime/src/: lib.rs
anyxml-encoding/: .gitignore  Cargo.toml  README.md  republic-of-korea.txt
anyxml-encoding/resources/: generate-ebcdic-table.ts  generate-jiscode-table.ts  generate-jisx0208-table.ts  generate-jisx0212-table.ts  generate-ksx1001-table.ts  get-character-names.ts  rfc1345parse.ts
anyxml-encoding/resources/jis-code-tables/: JIS_X_0201-Katakana.txt  JIS_X_0201-Latin.txt  JIS_X_0208.txt  JIS_X_0212.txt
anyxml-encoding/resources/rfc1345/: ANSI_X3_110-1983.txt  ANSI_X3_4-1968.txt  ASMO_449.txt  BS_4730.txt  BS_viewdata.txt  CSA_Z243_4-1985-1.txt  CSA_Z243_4-1985-2.txt  CSA_Z243_4-1985-gr.txt  CSN_369103.txt  DEC-MCS.txt  DIN_66003.txt  DS_2089.txt  EBCDIC-AT-DE-A.txt  EBCDIC-AT-DE.txt  EBCDIC-CA-FR.txt  EBCDIC-DK-NO-A.txt  EBCDIC-DK-NO.txt  EBCDIC-ES-A.txt  EBCDIC-ES-S.txt  EBCDIC-ES.txt  EBCDIC-FI-SE-A.txt  EBCDIC-FI-SE.txt  EBCDIC-FR.txt  EBCDIC-IT.txt  EBCDIC-PT.txt  EBCDIC-UK.txt  EBCDIC-US.txt  ECMA-cyrillic.txt  ES.txt  ES2.txt  GB_1988-80.txt  GB_2312-80.txt  GOST_19768-74.txt  IBM037.txt  IBM038.txt  IBM1026.txt  IBM273.txt  IBM274.txt  IBM275.txt  IBM277.txt  (+106 more)
anyxml-encoding/src/: ebcdic.rs  euc.rs  iso_8859.rs  jisx.rs  ksx.rs  lib.rs  shift_jis.rs  ucs4.rs  us_ascii.rs  utf16.rs  utf8.rs
anyxml-mediatype/: Cargo.toml  README.md
anyxml-mediatype/resources/: subtypes.rs
anyxml-mediatype/src/: lib.rs  subtypes.rs
anyxml-uri/: Cargo.toml  README.md
anyxml-uri/src/: lib.rs  rfc2396.rs  uri.rs
benches/: sax.rs
resources/: catalog-compact.dtd  catalog.dtd  generate-ast-for-unicode.ts  generate-iso8859-table.ts  generate-leapsecond-list.ts  generate-shiftjis-table.ts  get-xinclude-testsuite.ts  get-xmlconf.ts  get-xmlid-test-suite.ts  get-xslt-testsuite.ts
resources/c14n10/: example02.xml  example05.xml  example06.xml  example07.xml
resources/catalog/: badDelegation.xml  catalog.xml  goodDelegation.xml  nextCatalog.xml  testsuite.xml
resources/catalog/bad/: delegatePublic.xml  delegateSystem.xml  delegateURI.xml  nextCatalog.xml  public.xml  rewriteSystem.xml  rewriteURI.xml  system.xml  systemSuffix.xml  uri.xml  uriSuffix.xml
resources/catalog/ok/: delegatePublic.xml  delegateSystem.xml  delegateURI.xml  nextCatalog.xml  public.xml  rewriteSystem.xml  rewriteURI.xml  system.xml  systemSuffix.xml  uri.xml  uriSuffix.xml
resources/errors/: attr01.xml  attr02.xml  character_data01.xml  character_data02.xml  comment01.xml  comment02.xml  tag02.xml  tag03.xml
resources/errors/output/: attr01.xml.err  attr02.xml.err  character_data01.xml.err  character_data02.xml.err  comment01.xml.err  comment02.xml.err  tag01.xml.err  tag02.xml.err  tag03.xml.err
resources/ns-well-formed/: default01.xml  default02.xml  default03.xml  example07.rdf  ns01.xml  ns02.xml  ns03.xml  ns04.xml  ns05.xml  ns06.xml
resources/ns-well-formed/output/: default01.xml.sax  default02.xml.sax  default03.xml.sax  example07.rdf.sax  ns01.xml.sax  ns02.xml.sax  ns03.xml.sax  ns04.xml.sax  ns05.xml.sax  ns06.xml.sax
resources/relaxng/: schema-of-schema.rnc  schema-of-schema.rng  spectest.xml
resources/relaxng/compact/: example01.out  example01.rnc  example02.out  example03.out  example04.out  example05.out  example05.rnc  example06.out  example06.rnc  example07.out  example07.rnc  example08.out  example08.rnc  example09.out  example10.out  example10.rnc
resources/well-formed/: Shift_JIS.xml  UTF32-LE.xml  UTF32.xml  UTF8BOM.xml  attr1.xml  attr2.xml  attr3.xml  attr4.xml  character_data1.xml  comment1.xml  dtd1.xml  dtd2.xml  dtd3.xml  dtd4.xml  dtd5.xml  dtd6.xml  iso-8859-1.xml  iso-8859-10.xml  iso-8859-11.xml  iso-8859-13.xml  iso-8859-14.xml  iso-8859-15.xml  iso-8859-16.xml  iso-8859-2.xml  iso-8859-3.xml  iso-8859-4.xml  iso-8859-5.xml  iso-8859-6.xml  iso-8859-7.xml  iso-8859-8.xml  iso-8859-9.xml  tag5.xml  tag6.xml
resources/well-formed/output/: Shift_JIS.xml.sax  Shift_JIS.xml.stax  Shift_JIS.xml.tree  Shift_JIS.xml.tree.out  UTF32-LE.xml.sax  UTF32-LE.xml.stax  UTF32-LE.xml.tree  UTF32-LE.xml.tree.out  UTF32.xml.sax  UTF32.xml.stax  UTF32.xml.tree  UTF32.xml.tree.out  UTF8BOM.xml.tree  attr1.xml.sax  attr1.xml.stax  attr1.xml.tree  attr1.xml.tree.out  attr2.xml.sax  (+127 more)
resources/xml-id/: test-suite.xml
resources/xpath/: testsuite.xml
resources/xpointer/: testsuite.xml
src/: automata.rs  base64.rs  c14n.rs  catalog.rs  datetime.rs  encoding.rs  error.rs  lib.rs  mediatype.rs  save.rs  uri.rs  xinclude.rs  xpointer.rs
src/encoding/: iso_8859.rs  mod.rs  shift_jis.rs  ucs4.rs  us_ascii.rs  utf16.rs
src/parse/: cdsect.rs  char_data.rs  comment.rs  content.rs  element.rs  literals.rs  mod.rs  pi.rs  progressive.rs  tokens.rs  xmldecl.rs
src/relaxng/: compact.rs  datatype_library.rs  grammar.rs  mod.rs  parse.rs  validate.rs
src/sax/: attributes.rs  contentspec.rs  error.rs  handler.rs  mod.rs  parser.rs  source.rs
src/stax/: events.rs  handler.rs  mod.rs  writer.rs
src/tree/: attlist_decl.rs  attribute.rs  cdata_section.rs  comment.rs  convert.rs  document.rs  document_fragment.rs  document_type.rs  element.rs  element_decl.rs  entity_decl.rs  entity_reference.rs  mod.rs  namespace.rs  node.rs  notation_decl.rs  processing_instruction.rs  text.rs
src/xpath/: compile.rs  function.rs  mod.rs  ops.rs  step.rs
src/xsdtypes/: builtin.rs  facets.rs  mod.rs  value.rs
tests/: c14n-test.rs  catalog-test.rs  relaxng-test.rs  sax-test.rs  stax-test.rs  tree-test.rs  xinclude-test.rs  xpath-test.rs  xpointer-test.rs
(+6 files in other folders)
