[workspace]
members = ["anyxml-automata", "anyxml-cli", "anyxml-uri"]
package.edition = "2024"
package.authors = ["tayu0110"]
package.license = "MIT"
package.repository = "https://github.com/tayu0110/anyxml.git"
package.rust-version = "1.89.0"

[package]
name = "anyxml"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A fully spec-conformant XML library"
keywords = ["xml", "dtd", "xpath", "catalog", "relaxng"]
rust-version.workspace = true

[dependencies]
anyxml-uri = { path = "./anyxml-uri", version = "0.1.5" }
anyxml-automata = { path = "./anyxml-automata", version = "0.1.1" }


[[test]]
name = "sax-test"
path = "tests/sax-test.rs"

[[test]]
name = "stax-test"
path = "tests/stax-test.rs"

[[test]]
name = "tree-test"
path = "tests/tree-test.rs"

[[test]]
name = "xpath-test"
path = "tests/xpath-test.rs"

[[test]]
name = "xpointer-test"
path = "tests/xpointer-test.rs"

[[test]]
name = "xinclude-test"
path = "tests/xinclude-test.rs"

[[test]]
name = "catalog-test"
path = "tests/catalog-test.rs"

[[test]]
name = "relaxng-test"
path = "tests/relaxng-test.rs"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
