[workspace]
members = [
    "anyxml-automata",
    "anyxml-base64",
    "anyxml-bench",
    "anyxml-cli",
    "anyxml-datetime",
    "anyxml-encoding",
    "anyxml-uri",
]
package.edition = "2024"
package.authors = ["tayu0110"]
package.license = "MIT"
package.repository = "https://github.com/tayu0110/anyxml.git"
package.rust-version = "1.89.0"

[package]
name = "anyxml"
version = "0.10.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A fully spec-conformant XML library"
keywords = ["xml", "dtd", "xpath", "catalog", "relaxng"]
rust-version.workspace = true
exclude = [
    "benches/*",
    "resources/*",
]
include = [
    "resources/catalog-compact.dtd"
]

[dependencies]
anyxml-uri = { path = "./anyxml-uri", version = "^0.1" }
anyxml-automata = { path = "./anyxml-automata", version = "^0.1" }
anyxml-encoding = { path = "./anyxml-encoding", version = "^0.1" }
anyxml-base64 = { path = "./anyxml-base64", version = "^0.1" }
anyxml-datetime = { path = "./anyxml-datetime", version = "0.1.1" }

[[test]]
name = "sax-test"
path = "tests/sax-test.rs"

[[test]]
name = "stax-test"
path = "tests/stax-test.rs"

[[test]]
name = "tree-test"
path = "tests/tree-test.rs"

[[test]]
name = "xpath-test"
path = "tests/xpath-test.rs"

[[test]]
name = "xpointer-test"
path = "tests/xpointer-test.rs"

[[test]]
name = "xinclude-test"
path = "tests/xinclude-test.rs"

[[test]]
name = "catalog-test"
path = "tests/catalog-test.rs"

[[test]]
name = "relaxng-test"
path = "tests/relaxng-test.rs"

[[test]]
name = "c14n-test"
path = "tests/c14n-test.rs"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
enum_variant_names = "allow"
