[package]
name = "anyxml-datetime"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "simple datetime format library for XML"
keywords = ["date", "time", "iso8601", "xml"]
rust-version.workspace = true

[dependencies]
